tests/src/frontend/typechecking/invalid/type_annotation_1.sk
fun main(): void {
  print_raw(("Fail" : Int))
}
